adjusted contrast with background corrected portfolio pictures change p size

--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@ body {
 a,
 button {
     transition: all .3s ease-in-out;
-    outline: none!important;
+    /* outline: none; */
 }
 
 a:hover {
-    text-decoration: none;
+
     cursor: pointer;
 }
 
@@ -91,7 +91,7 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("img/texture-paper.png");
+    background: url("img/texture-paper.png"), rgba(0, 0, 0, 0.4);
     background-size: 280px 280px;
 }
 
@@ -535,6 +535,10 @@ a[data-lightbox] {
     display: block;
     text-align: center;
 }
+a[data-lightbox] img {
+    margin-left: auto;
+    margin-right: auto;
+}
 
 a[data-lightbox]:hover::before {
     content: "+";
@@ -677,7 +681,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 14.5px;
 }
 
 .tight-width-whitespace {
@@ -717,7 +721,7 @@ h3 {
 }
 
 .med-width-whitespace {
-    max-width: 800px;
+    /* max-width: 800px; */
     margin: auto auto auto auto;
     box-shadow: 0px 0px 0px #000000;
 }
@@ -753,7 +757,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(0,0,0, 0.7);
     padding: 40px 40px 40px 40px;
 }
 
@@ -822,7 +826,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation.jpg");
 }
 
 @media (max-width: 1024px) {
